--- a/MyIntentApp/app/src/main/res/layout/activity_main.xml
+++ b/MyIntentApp/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,15 @@
         android:id="@+id/btn_move_activity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
         android:layout_marginBottom="16dp"
         android:text="@string/move_activity" />
+
+    <Button
+        android:id="@+id/btn_activity_data"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:text="@string/move_with_data" />
+
+
 </LinearLayout>
